MAJOR! Generating cogfiles Using titiler to render those

--- a/inst/www/theme.css
+++ b/inst/www/theme.css
@@ -144,13 +144,13 @@ h4 {
 }
 
 .no-padding {
-  padding-left: 0;
-  padding-right: 0;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
 
 .no-padding-tab>.row>* {
-  padding-left: 0;
-  padding-right: 0;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
 
 .btn{
